2010-06-23  Colin Watson  <cjwatson@ubuntu.com>

	Sync up other versions of the Linux loader with Robert Millan's
	change of 2010-01-09, "Make loader output a bit more user-friendly".

	* loader/i386/efi/linux.c (grub_linux_boot): Move debug info to
	grub_dprintf().
	(grub_cmd_linux): Likewise.
	(grub_cmd_initrd): Likewise.
	* loader/i386/ieee1275/linux.c (grub_cmd_linux): Likewise.
	* loader/i386/pc/linux.c (grub_cmd_linux): Likewise.

2010-06-21  Colin Watson  <cjwatson@ubuntu.com>

	* kern/efi/mm.c (grub_efi_mm_init): Handle systems with memory maps
	larger than MEMORY_MAP_SIZE.

2010-06-21  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix parallel build.

	* conf/common.rmk: Add grub_script.tab.h as a grub-script-check
	dependency.
	* script/parser.y: #include grub_script.tab.h header.

2010-06-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Support >3GiB and <16MiB RAM in i386-qemu.

	* kern/i386/qemu/mmap.c (QEMU_CMOS_MEMSIZE2_HIGH): New const.
	(QEMU_CMOS_MEMSIZE2_LOW): Likewise.
	(grub_lower_mem): Removed.
	(grub_upper_mem): Likewise.
	(mem_size): Made static.
	(above_4g): New variable.
	(grub_machine_mmap_init): Detect small mem_size and above_4g.
	(grub_machine_mmap_iterate): Order in ascending order and add above_4g
	support.

2010-06-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Cirrus 5446 and Bochs video cards support.

	* conf/i386.rmk (pkglib_MODULES): Add video_cirrus.mod and
	video_bochs.mod
	(video_cirrus_mod_SOURCES): New variable.
	(video_cirrus_mod_CFLAGS): Likewise.
	(video_cirrus_mod_LDFLAGS): Likewise.
	(video_bochs_mod_SOURCES): Likewise.
	(video_bochs_mod_CFLAGS): Likewise.
	(video_bochs_mod_LDFLAGS): Likewise.
	* include/grub/vga.h: New file.
	* include/grub/video_fb.h (grub_video_fb_doublebuf_blit_init): Removed.
	(grub_video_fb_set_page_t): New type.
	(grub_video_fb_setup): New prototype.
	(grub_video_fb_swap_buffers): Likewise.
	(grub_video_fb_get_info_and_fini): Likewise.